<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/aldrich"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/upcomingLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/upcomingLaunch"
                android:textColor="@color/headerColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/missionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/launchName"
                android:textColor="@color/missionColor"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcomingLaunch" />

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missionName"
                app:srcCompat="@drawable/starlink_header_image" />


            <TextView
                android:id="@+id/detailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detailsText"
                android:textColor="@color/headerColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageHeader" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/dateText"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsText" />

            <TextView
                android:id="@+id/dateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/dateText"
                app:layout_constraintStart_toStartOf="@+id/timeName"
                app:layout_constraintTop_toTopOf="@+id/dateText" />

            <TextView
                android:id="@+id/timeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/timeText"
                app:layout_constraintStart_toStartOf="@+id/locationName"
                app:layout_constraintTop_toTopOf="@+id/timeText" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/timeText"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateText" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/locationText"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />

            <TextView
                android:id="@+id/locationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/location"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/locationText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/locationText"
                app:layout_constraintTop_toTopOf="@+id/locationText" />

            <TextView
                android:id="@+id/rocketText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/rocketText"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationText" />

            <TextView
                android:id="@+id/rocketName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rocketName"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/rocketText"
                app:layout_constraintStart_toStartOf="@+id/locationName"
                app:layout_constraintTop_toTopOf="@+id/rocketText" />

            <TextView
                android:id="@+id/routeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/routeHeader"
                android:textColor="@color/headerColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rocketName" />

            <ImageView
                android:id="@+id/imageRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/routeText"
                app:srcCompat="@drawable/starlink_route_schema" />

            <TextView
                android:id="@+id/socialMediaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/socialMedia"
                android:textColor="@color/headerColor"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageRoute" />


            <ImageView
                android:id="@+id/youtubeImage"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/youtube_logo"
                app:layout_constraintEnd_toStartOf="@+id/twitterImage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/socialMediaText" />

            <TextView
                android:id="@+id/youtubeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/youtubeText"
                android:textColor="@color/textColor"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/youtubeImage"
                app:layout_constraintStart_toStartOf="@id/youtubeImage"
                app:layout_constraintTop_toBottomOf="@id/youtubeImage" />

            <ImageView
                android:id="@+id/twitterImage"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/twitter_logo"
                app:layout_constraintEnd_toStartOf="@+id/flickrImage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/youtubeImage"
                app:layout_constraintTop_toBottomOf="@id/socialMediaText" />

            <TextView
                android:id="@+id/twitterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/twitterText"
                android:textColor="@color/textColor"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/twitterImage"
                app:layout_constraintStart_toStartOf="@id/twitterImage"
                app:layout_constraintTop_toBottomOf="@id/twitterImage" />

            <ImageView
                android:id="@+id/flickrImage"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/flickr_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/twitterImage"
                app:layout_constraintTop_toBottomOf="@id/socialMediaText" />

            <TextView
                android:id="@+id/flickrText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/flickrText"
                android:textColor="@color/textColor"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/flickrImage"
                app:layout_constraintStart_toStartOf="@id/flickrImage"
                app:layout_constraintTop_toBottomOf="@id/flickrImage" />

            <TextView
                android:id="@+id/manageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/manageText"
                android:textColor="@color/headerColor"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/twitterText" />

            <Button
                android:id="@+id/launchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/moonShatter"
                android:fontFamily="@font/aldrich"
                android:text="@string/launchText"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manageText" />

            <Button
                android:id="@+id/abortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/abortRed"
                android:fontFamily="@font/aldrich"
                android:text="@string/abortText"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/launchButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>